--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,33 @@
-attrs==21.2.0
+APScheduler==3.6.3
+cachetools==4.2.2
 certifi==2021.10.8
 charset-normalizer==2.0.7
+cycler==0.10.0
+flake8==4.0.1
 idna==3.3
-iniconfig==1.1.1
+jedi==0.18.0
+kiwisolver==1.3.2
+matplotlib==3.4.3
+mccabe==0.6.1
 numpy==1.21.3
-packaging==21.0
 pandas==1.3.4
-pluggy==1.0.0
-py==1.10.0
+parso==0.8.2
+Pillow==8.4.0
+pudb==2021.1
+pycodestyle==2.8.0
 pycoingecko==2.2.0
-pyparsing==2.4.7
-pytest==6.2.5
+pyflakes==2.4.0
+Pygments==2.10.0
+pyparsing==3.0.1
 python-dateutil==2.8.2
+python-telegram-bot==13.7
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
 six==1.16.0
-toml==0.10.2
+termcolor==1.1.0
+tornado==6.1
+tzdata==2021.4
+tzlocal==4.0.1
 urllib3==1.26.7
+urwid==2.1.2
